# faster

./: .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  hello.py  initialize.py  pyproject.toml  pyrightconfig.json  sync_perms.py  update-cloud-secret.sh
app/: main.py
app/access_control/: cruds.py  models.py  router.py  schemas.py
app/config/: config.py  database.py  init_db.py
app/dependencies/: dependencies.py
app/migrations/: env.py
app/migrations/versions/: 2025_08_04_1342-1454255d0c60_initial_migration.py  2025_08_04_2249-bfca3545c2eb_initial_migration.py
app/mixins/: columns.py  commons.py  schemas.py
app/tests/: conftest.py
app/tests/simulation/: conftest.py  simulator.py
app/tests/user/: test_cruds.py  test_router.py
app/tests/utils/: utils.py
app/user/: cruds.py  models.py  router.py  schemas.py
app/utils/: __init__.py  crud_util.py  custom_validators.py  enums.py  image_qr.py  mail.py  misc.py  sms.py  user.py
